Add Journal Entry topic page

--- a/topics/financial-statements.html
+++ b/topics/financial-statements.html
@@ -19,6 +19,7 @@
                             <a href="basic-accounting-equation.html">Basic Accounting Equation</a>
                             <a href="debits-credits.html">Debits & Credits</a>
                             <a href="financial-statements.html">Financial Statements</a>
+                            <a href="topics/journal-entry.html">The Journal Entry</a>
                         </div>
                     </li>
                     <li><a href="../about.html">About</a></li>
