--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                             <a href="topics/basic-accounting-equation.html">Basic Accounting Equation</a>
                             <a href="topics/debits-credits.html">Debits & Credits</a>
                             <a href="topics/financial-statements.html">Financial Statements</a>
+                            <a href="topics/journal-entry.html">The Journal Entry</a>
                             </div>
                     </li>
                     <li><a href="about.html">About</a></li>
