Add responsive humburger menu

--- a/topics/financial-statements.html
+++ b/topics/financial-statements.html
@@ -10,6 +10,9 @@
     <header>
         <div class="container">
             <h1>Accounting Fundamentals</h1>
+            <button id="hamburger-btn" aria-label="Open navigation menu">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+        </button>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
@@ -71,8 +74,8 @@
         <button id="mark-topic-complete" class="button" data-topic-id="financial-statements" style="display: none;">Mark Topic as Complete</button>
 
         <nav class="pagination">
-            <a href="debits-credits.html" class="button prev-button">&larr; Previous Topic</a>
-            <a href="../index.html" class="button next-button">Back to Home &rarr;</a>
+           <a href="debits-credits.html" class="button prev-button">&larr; Previous Topic</a>
+           <a href="journal-entry.html" class="button next-button">Next Topic: The Journal Entry &rarr;</a>
         </nav>
     </main>
 
