Prepare for deployment

--- a/topics/basic-accounting-equation.html
+++ b/topics/basic-accounting-equation.html
@@ -70,7 +70,7 @@
         </ul>
 
         <h3>Practice Quiz: Basic Accounting Equation</h3>
-        <div id="quiz-container">
+        <div id="quiz-container"data-topic-id="basic-accounting-equation">
             </div>
         <button id="submit-quiz" class="button" style="display: none;">Submit Quiz</button>
         <div id="quiz-results"></div>
@@ -98,7 +98,7 @@
     </div>
 
     <script src="../js/script.js"></script>
-    <script src="../js/quiz.js"></script>
+    <script src="../js/api-quiz.js"></script>
     <script src="../js/diagram.js"></script>
 </body>
 </html>
