--- a/topics/debits-credits.html
+++ b/topics/debits-credits.html
@@ -71,7 +71,7 @@
         </div>
 
         <h3>Practice Quiz: Debits & Credits</h3>
-        <div id="quiz-container">
+        <div id="quiz-container"data-topic-id="debits-credits">
             </div>
         <button id="submit-quiz" class="button" style="display: none;">Submit Quiz</button>
         <div id="quiz-results"></div>
@@ -101,6 +101,6 @@
     <script src="../js/script.js"></script>
     <script src="../js/diagram.js"></script>
 
-    <script src="../js/debits-credits-quiz.js"></script>
+    <script src="../js/api-quiz.js"></script>
 </body>
 </html>
