--- a/topics/financial-statements.html
+++ b/topics/financial-statements.html
@@ -67,7 +67,7 @@
         </div>
         
         <h3>Practice Quiz: Financial Statements</h3>
-        <div id="quiz-container">
+        <div id="quiz-container"data-topic-id="financial-statements">
             </div>
         <button id="submit-quiz" class="button" style="display: none;">Submit Quiz</button>
         <div id="quiz-results"></div>
@@ -97,6 +97,6 @@
     <script src="../js/script.js"></script>
     <script src="../js/diagram.js"></script>
 
-    <script src="../js/financial-statements-quiz.js"></script>
+    <script src="../js/api-quiz.js"></script>
 </body>
 </html>
