--- a/topics/journal-entry.html
+++ b/topics/journal-entry.html
@@ -94,7 +94,7 @@
         </div>
         
         <h3>Practice Quiz: Journal Entries</h3>
-        <div id="quiz-container"></div>
+        <div id="quiz-container"data-topic-id="journal-entry"></div>
         <button id="submit-quiz" class="button" style="display: none;">Submit Quiz</button>
         <div id="quiz-results"></div>
         <button id="mark-topic-complete" class="button" data-topic-id="journal-entry" style="display: none;">Mark Topic as Complete</button>
@@ -120,6 +120,6 @@
 
     <script src="../js/script.js"></script>
     <script src="../js/diagram.js"></script>
-    <script src="../js/journal-entry-quiz.js"></script>
+    <script src="../js/api-quiz.js"></script>
 </body>
 </html>
