Add database and working contact form API

--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,7 @@
                         <textarea id="message" name="message" rows="6" required></textarea>
                     </div>
                     <button type="submit" class="button">Send Message</button>
+                    <div id="form-status" style="margin-top: 20px;"></div>
                 </form>
             </div>
         </div>
@@ -93,5 +94,6 @@
     </div>
 
     <script src="js/script.js"></script>
+    <script src="js/contact-form.js"></script>
 </body>
 </html>
