--- a/topics/debits-credits.html
+++ b/topics/debits-credits.html
@@ -14,22 +14,23 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
         </button>
             <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn">Topics</a>
-                        <div class="dropdown-content">
-                            <a href="basic-accounting-equation.html">Basic Accounting Equation</a>
-                            <a href="debits-credits.html">Debits & Credits</a>
-                            <a href="financial-statements.html">Financial Statements</a>
-                              <a href="topics/journal-entry.html">The Journal Entry</a>
-                        </div>
-                    </li>
-                    <li><a href="../about.html">About</a></li>
-                    <li><a href="../contact.html">Contact</a></li>
-                    <li><a href="#" id="view-progress">View Progress</a></li>
-                </ul>
-            </nav>
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="basic-accounting-equation.html">Topics</a></li>
+        <li><a href="../about.html">About</a></li>
+        <li><a href="../contact.html">Contact</a></li>
+        
+        <li class="logged-out"><a href="../register.html">Register</a></li>
+        <li class="logged-out"><a href="../login.html" id="login-btn">Login</a></li>
+        
+        <li class="logged-in" style="display: none;">
+            <span id="nav-username" style="color: white; padding: 10px 18px;"></span>
+        </li>
+        <li class="logged-in" style="display: none;">
+            <a href="#" id="logout-btn">Logout</a>
+        </li>
+    </ul>
+</nav>
         </div>
     </header>
 
