Add profile photo to About page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                      <li><a href="topics/basic-accounting-equation.html">Topics</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="contact.html">Contact</a></li>
+                     <li><a href="#" id="view-progress">View Progress</a></li>
         
                      <li class="logged-out"><a href="register.html">Register</a></li>
                      <li class="logged-out"><a href="login.html" id="login-btn">Login</a></li>
@@ -62,6 +63,10 @@
                 <h3>Track Your Progress</h3>
                 <p>Monitor your learning journey and see your achievements.</p>
             </div>
+            <a href="topics/financial-ratio-analysis.html" class="feature-item interactive-report">
+                <h3>Interactive Report</h3>
+                <p>Explore financial ratio analysis with dynamic charts and case studies.</p>
+            </a>
         </section>
     </main>
 
