--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
                    <li><a href="topics/basic-accounting-equation.html">Topics</a></li>
                    <li><a href="about.html">About</a></li>
                    <li><a href="contact.html">Contact</a></li>
+                   <li><a href="#" id="view-progress">View Progress</a></li>
         
                    <li class="logged-out"><a href="register.html">Register</a></li>
                    <li class="logged-out"><a href="login.html" id="login-btn">Login</a></li>
@@ -38,7 +39,7 @@
         <h2>About Accounting Fundamentals</h2>
         <div class="about-container">
             <div class="about-content">
-                <p>Welcome to Accounting Fundamentals, your dedicated platform for mastering the core principles of accounting. Our mission is to provide students with an engaging, interactive, and comprehensive learning experience that simplifies complex accounting concepts.</p>
+                <p>Welcome to Accounting Fundamentals, your dedicated platform for mastering the core principles of accounting.I am Ak Azad . Currently studying at Department of Marketing ,University of Dhaka . Most of the students struggle when learning accounting for the first time. My mission is to provide students with an engaging, interactive, and comprehensive learning experience that simplifies complex accounting concepts.</p>
                 <p>We understand that accounting can be challenging, and that's why we've designed our website with a focus on:</p>
                 <ul>
                     <li><strong>Interactive Explanations:</strong> Learn through clear, concise text accompanied by dynamic diagrams that bring concepts to life.</li>
@@ -49,7 +50,7 @@
                 <p>Whether you're new to accounting or looking to reinforce your understanding, Accounting Fundamentals is here to guide you every step of the way. Happy learning!</p>
             </div>
             <div class="about-image">
-                <img src="https://placehold.co/400x500/2c3e50/ffffff?text=Our+Mission" alt="Professional office setting">
+                <img src="images/profile-photo.png" alt="AK Azad">
             </div>
         </div>
     </main>
