--- a/contact.html
+++ b/contact.html
@@ -95,6 +95,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/script.js"></script>
     <script src="js/contact-form.js"></script>
 </body>
