--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
