--- a/login.html
+++ b/login.html
@@ -61,6 +61,7 @@
         </div>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/script.js"></script>
     <script src="js/login.js"></script>
 
