--- a/register.html
+++ b/register.html
@@ -66,6 +66,7 @@
         </div>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/register.js"></script>
 </body>
 </html>
