--- a/topics/basic-accounting-equation.html
+++ b/topics/basic-accounting-equation.html
@@ -98,6 +98,7 @@
         </div>
     </div>
 
+    <script src="../js/config.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/api-quiz.js"></script>
     <script src="../js/diagram.js"></script>
