--- a/topics/financial-statements.html
+++ b/topics/financial-statements.html
@@ -95,9 +95,9 @@
         </div>
     </div>
 
+    <script src="../js/config.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/diagram.js"></script>
-
     <script src="../js/api-quiz.js"></script>
 </body>
 </html>
