--- a/topics/journal-entry.html
+++ b/topics/journal-entry.html
@@ -119,6 +119,7 @@
         </div>
     </div>
 
+    <script src="../js/config.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/diagram.js"></script>
     <script src="../js/api-quiz.js"></script>
