--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
                    <li><a href="topics/basic-accounting-equation.html">Topics</a></li>
                    <li><a href="about.html">About</a></li>
                    <li><a href="contact.html">Contact</a></li>
+                   <li><a href="portfolio.html">Portfolio</a></li>
                    <li><a href="#" id="view-progress">View Progress</a></li>
         
                    <li class="logged-out"><a href="register.html">Register</a></li>
