--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accounting Fundamentals - Home</title>
-    <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="bg-gray-100 min-h-screen">
+<body class="bg-gray-100 min-h-screen font-sans">
     <header class="bg-[#34495e] text-white shadow-md">
         <div class="container mx-auto flex items-center justify-between py-4 px-6">
             <h1 class="text-2xl font-bold">Accounting Fundamentals</h1>
-            <nav class="relative">
+            <!-- Hamburger Menu Button -->
+            <div class="lg:hidden">
+                <button id="menu-button" class="text-white focus:outline-none">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                    </svg>
+                </button>
+            </div>
+            <!-- Desktop Navigation -->
+            <nav class="hidden lg:flex items-center relative">
                 <div id="nav-slider" class="absolute bottom-0 left-0 h-1 bg-sky-400 rounded transition-all duration-300" style="width: 0;"></div>
                 <ul class="flex space-x-4 font-semibold text-lg">
                     <li><a href="#home" class="nav-link py-2 px-6 rounded-lg transition-colors duration-200">Home</a></li>
@@ -33,15 +42,94 @@
                 </ul>
             </nav>
         </div>
+        <!-- Mobile Navigation -->
+        <div id="mobile-menu" class="lg:hidden hidden">
+            <ul class="flex flex-col items-center space-y-2 py-4 font-semibold text-lg">
+                <li><a href="#home" class="nav-link-mobile py-2 px-6 rounded-lg transition-colors duration-200 block">Home</a></li>
+                <li class="relative group w-full text-center">
+                    <a href="#topics" class="nav-link-mobile py-2 px-6 rounded-lg transition-colors duration-200 flex items-center justify-center">Topics <svg class="ml-2 w-4 h-4 inline-block" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/></svg></a>
+                    <ul class="bg-gray-700 text-white font-semibold rounded-lg shadow-lg hidden group-hover:block w-full">
+                        <li><a href="#topic-basic-accounting-equation" class="block px-6 py-3 hover:bg-sky-500">Basic Accounting Equation</a></li>
+                        <li><a href="#topic-debits-credits" class="block px-6 py-3 hover:bg-sky-500">Debits & Credits</a></li>
+                        <li><a href="#topic-financial-statements" class="block px-6 py-3 hover:bg-sky-500">Financial Statements</a></li>
+                        <li><a href="#topic-journal-entry" class="block px-6 py-3 hover:bg-sky-500">Journal Entry</a></li>
+                        <li><a href="#topic-financial-ratio-analysis" class="block px-6 py-3 hover:bg-sky-500">Ratio Analysis</a></li>
+                    </ul>
+                </li>
+                <li><a href="#about" class="nav-link-mobile py-2 px-6 rounded-lg transition-colors duration-200 block">About</a></li>
+                <li><a href="#contact" class="nav-link-mobile py-2 px-6 rounded-lg transition-colors duration-200 block">Contact</a></li>
+                <li><a href="portfolio.html" class="py-2 px-6 rounded-lg transition-colors duration-200 block">Portfolio</a></li>
+                <li><a href="#register" class="nav-link-mobile py-2 px-6 rounded-lg transition-colors duration-200 block">Register</a></li>
+                <li><a href="#login" class="nav-link-mobile py-2 px-6 rounded-lg transition-colors duration-200 block">Login</a></li>
+            </ul>
+        </div>
     </header>
     <main class="container mx-auto px-6 py-8">
-        <div id="spa-content"></div>
+        <div id="spa-content" class="bg-white p-8 rounded-lg shadow-lg">
+            <h2 class="text-3xl font-bold mb-4 text-gray-800">Welcome to Accounting Fundamentals</h2>
+            <p class="text-gray-600 leading-relaxed">
+                This is a placeholder for your single-page application content. Use the navigation above to explore different sections.
+                The content for each section will be loaded dynamically here. Resize your browser window to see the responsive hamburger menu in action.
+            </p>
+        </div>
     </main>
     <footer class="bg-[#34495e] text-white text-center py-4 mt-8">
         <div class="container mx-auto">
             <p>&copy; 2025 Accounting Fundamentals. All rights reserved.</p>
         </div>
     </footer>
-    <script src="js/spa.js"></script>
+
+    <script>
+        // JavaScript to toggle the mobile menu
+        const menuButton = document.getElementById('menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        menuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+
+        // Optional: Close the mobile menu when a link is clicked
+        const mobileNavLinks = document.querySelectorAll('#mobile-menu a');
+        mobileNavLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                // Check if the link is a dropdown toggle
+                if (!link.nextElementSibling || !link.nextElementSibling.classList.contains('group-hover:block')) {
+                     mobileMenu.classList.add('hidden');
+                }
+            });
+        });
+
+        // Logic for the navigation slider underline effect on desktop
+        const navLinks = document.querySelectorAll('.nav-link');
+        const navSlider = document.getElementById('nav-slider');
+
+        function updateSlider(element) {
+            if (element && navSlider) {
+                navSlider.style.width = `${element.offsetWidth}px`;
+                navSlider.style.left = `${element.offsetLeft}px`;
+            }
+        }
+
+        navLinks.forEach(link => {
+            link.addEventListener('mouseenter', () => updateSlider(link));
+        });
+
+        // Set initial slider position
+        const initialActiveLink = document.querySelector('.nav-link'); // Default to first link
+        if (initialActiveLink) {
+            // A small delay to ensure rendering is complete
+            setTimeout(() => updateSlider(initialActiveLink), 100);
+        }
+
+        // Reset slider when mouse leaves the navigation area
+        const nav = document.querySelector('nav.hidden.lg\\:flex');
+        if(nav){
+            nav.addEventListener('mouseleave', () => {
+                 // You can either hide it or move it back to the active link
+                 updateSlider(document.querySelector('.nav-link'));
+            });
+        }
+
+    </script>
 </body>
 </html>
