Full audit: username-only registration, OAuth, frontend consistency, requirements update, bugfixes

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <li><a href="#about" class="nav-link py-2 px-6 rounded-lg transition-colors duration-200">About</a></li>
                     <li><a href="#contact" class="nav-link py-2 px-6 rounded-lg transition-colors duration-200">Contact</a></li>
                     <li><a href="portfolio.html" class="py-2 px-6 rounded-lg transition-colors duration-200" target="_blank" rel="noopener">Portfolio</a></li>
-                    <li><a href="#register" class="nav-link py-2 px-6 rounded-lg transition-colors duration-200">Register</a></li>
-                    <li><a href="#login" class="nav-link py-2 px-6 rounded-lg transition-colors duration-200">Login</a></li>
+                    <li><a href="register.html" class="nav-link py-2 px-6 rounded-lg transition-colors duration-200">Register</a></li>
+                    <li><a href="login.html" class="nav-link py-2 px-6 rounded-lg transition-colors duration-200">Login</a></li>
                 </ul>
             </nav>
             <!-- Mobile nav will be injected by JS -->
