--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                  <li><a href="about.html">About</a></li>
                  <li><a href="contact.html">Contact</a></li>
                  <li><a href="portfolio.html">Portfolio</a></li>
-                 <li><a href="#" id="view-progress">View Progress</a></li>
+                 <li class="logged-in" style="display: none;"><a href="#" id="view-progress">View Progress</a></li>
         
                  <li class="logged-out"><a href="register.html">Register</a></li>
                  <li class="logged-out"><a href="login.html" id="login-btn">Login</a></li>
