--- a/login.html
+++ b/login.html
@@ -6,17 +6,18 @@
   <title>Neumorphic Auth Form</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="css/style.css?v=2">
   <style>
     body {
       font-family: 'Inter', sans-serif;
     }
     .neumorphic-base {
-      background: #e0e5ec;
-      box-shadow: 10px 10px 30px #bec3c9, -10px -10px 30px #ffffff;
+      background: #e0e5ec !important;
+      box-shadow: 10px 10px 30px #bec3c9, -10px -10px 30px #ffffff !important;
     }
     .neumorphic-inset {
-      background: #e0e5ec;
-      box-shadow: inset 5px 5px 10px #bec3c9, inset -5px -5px 10px #ffffff;
+      background: #e0e5ec !important;
+      box-shadow: inset 5px 5px 10px #bec3c9, inset -5px -5px 10px #ffffff !important;
     }
     .neumorphic-active {
       background: linear-gradient(145deg, #d1d9e6, #ffffff);
@@ -32,7 +33,7 @@
     }
   </style>
 </head>
-<body class="bg-[#e0e5ec] flex justify-center items-center min-h-screen p-4">
+<body class="neumorphic-base flex justify-center items-center min-h-screen p-4">
   <div class="container neumorphic-base w-full max-w-sm p-8 rounded-3xl">
     <div class="tabs flex justify-between mb-6">
       <button id="loginBtn" class="flex-1 py-2 mx-1 border-none rounded-2xl neumorphic-active font-bold cursor-pointer text-gray-700 transition-all duration-300">Login</button>
@@ -41,8 +42,8 @@
     <div id="messageBox" class="hidden p-3 mb-4 rounded-lg text-center text-sm font-medium" role="alert"></div>
     <div id="loginForm" class="form-section">
       <div class="input-group mb-4">
-        <label for="loginEmail" class="block mb-1 text-sm text-gray-700">Email</label>
-        <input type="email" id="loginEmail" placeholder="you@example.com" class="w-full p-2 rounded-xl border-none neumorphic-input text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-300" />
+        <label for="loginUsername" class="block mb-1 text-sm text-gray-700">Username</label>
+        <input type="text" id="loginUsername" placeholder="yourusername" class="w-full p-2 rounded-xl border-none neumorphic-input text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-300" />
       </div>
       <div class="input-group mb-6">
         <label for="loginPassword" class="block mb-1 text-sm text-gray-700">Password</label>
@@ -73,18 +74,43 @@
         <span class="mr-2">👤➕</span> Register
       </button>
     </div>
-    <div class="or text-center mt-6 text-sm text-gray-500">Or sign up with</div>
-    <div class="social flex justify-center gap-4 mt-4">
-      <div class="social-icon w-10 h-10 neumorphic-button rounded-full flex justify-center items-center cursor-pointer text-lg text-gray-700 transition-all duration-300 hover:neumorphic-inset">
-        <span>G</span>
-      </div>
-      <div class="social-icon w-10 h-10 neumorphic-button rounded-full flex justify-center items-center cursor-pointer text-lg text-gray-700 transition-all duration-300 hover:neumorphic-inset">
-        <span>f</span>
-      </div>
-      <div class="social-icon w-10 h-10 neumorphic-button rounded-full flex justify-center items-center cursor-pointer text-lg text-gray-700 transition-all duration-300 hover:neumorphic-inset">
-        <span>🐦</span>
-      </div>
+    <div class="or text-center mt-6 text-sm text-gray-500">Or sign in with</div>
+    <div class="social-login-buttons flex flex-col gap-3 mt-4">
+      <a href="/login/google" class="social-btn google-btn neumorphic-button">Sign in with Google</a>
+      <a href="/login/facebook" class="social-btn facebook-btn neumorphic-button">Sign in with Facebook</a>
     </div>
+    <style>
+      .social-login-buttons .social-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px 0;
+        border-radius: 12px;
+        font-weight: 600;
+        font-size: 1rem;
+        text-decoration: none;
+        transition: background 0.2s, box-shadow 0.2s;
+        box-shadow: 5px 5px 10px #bec3c9, -5px -5px 10px #ffffff;
+      }
+      .google-btn {
+        background: #fff;
+        color: #444;
+        border: 1px solid #ddd;
+      }
+      .google-btn:hover {
+        background: #f1f1f1;
+        box-shadow: inset 3px 3px 6px #bec3c9, inset -3px -3px 6px #ffffff;
+      }
+      .facebook-btn {
+        background: #1877f3;
+        color: #fff;
+        border: none;
+      }
+      .facebook-btn:hover {
+        background: #145db2;
+        box-shadow: inset 3px 3px 6px #bec3c9, inset -3px -3px 6px #ffffff;
+      }
+    </style>
   </div>
   <script>
     // Get references to elements
@@ -151,21 +177,17 @@
       showMessage(`Welcome ${name}! Registration successful.`, 'success');
     }
     function handleLogin() {
-      const email = document.getElementById('loginEmail').value.trim();
+      const username = document.getElementById('loginUsername').value.trim();
       const password = document.getElementById('loginPassword').value;
-      if (!email || !password) {
-        showMessage("Please enter your email and password.", 'error');
+      if (!username || !password) {
+        showMessage("Please enter your username and password.", 'error');
         return;
       }
-      const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-      if (!emailRegex.test(email)) {
-        showMessage("Please enter a valid email address.", 'error');
-        return;
-      }
-      if (email === "test@example.com" && password === "password123") {
+      // Demo logic (replace with real API call as needed)
+      if (username === "testuser" && password === "password123") {
         showMessage("Login successful! Welcome back.", 'success');
       } else {
-        showMessage("Invalid email or password.", 'error');
+        showMessage("Invalid username or password.", 'error');
       }
     }
   </script>
