--- a/register.html
+++ b/register.html
@@ -6,17 +6,18 @@
   <title>Neumorphic Auth Form</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="css/style.css?v=2">
   <style>
     body {
       font-family: 'Inter', sans-serif;
     }
     .neumorphic-base {
-      background: #e0e5ec;
-      box-shadow: 10px 10px 30px #bec3c9, -10px -10px 30px #ffffff;
+      background: #e0e5ec !important;
+      box-shadow: 10px 10px 30px #bec3c9, -10px -10px 30px #ffffff !important;
     }
     .neumorphic-inset {
-      background: #e0e5ec;
-      box-shadow: inset 5px 5px 10px #bec3c9, inset -5px -5px 10px #ffffff;
+      background: #e0e5ec !important;
+      box-shadow: inset 5px 5px 10px #bec3c9, inset -5px -5px 10px #ffffff !important;
     }
     .neumorphic-active {
       background: linear-gradient(145deg, #d1d9e6, #ffffff);
@@ -32,7 +33,7 @@
     }
   </style>
 </head>
-<body class="bg-[#e0e5ec] flex justify-center items-center min-h-screen p-4">
+<body class="neumorphic-base flex justify-center items-center min-h-screen p-4">
   <div class="container neumorphic-base w-full max-w-sm p-8 rounded-3xl">
     <div class="tabs flex justify-between mb-6">
       <button id="loginBtn" class="flex-1 py-2 mx-1 border-none rounded-2xl neumorphic-inset font-bold cursor-pointer text-gray-700 transition-all duration-300">Login</button>
@@ -54,12 +55,8 @@
     </div>
     <div id="registerForm" class="form-section">
       <div class="input-group mb-4">
-        <label for="registerName" class="block mb-1 text-sm text-gray-700">Full Name</label>
-        <input type="text" id="registerName" placeholder="John Doe" class="w-full p-2 rounded-xl border-none neumorphic-input text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-300" />
-      </div>
-      <div class="input-group mb-4">
-        <label for="registerEmail" class="block mb-1 text-sm text-gray-700">Email</label>
-        <input type="email" id="registerEmail" placeholder="you@example.com" class="w-full p-2 rounded-xl border-none neumorphic-input text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-300" />
+        <label for="registerUsername" class="block mb-1 text-sm text-gray-700">Username</label>
+        <input type="text" id="registerUsername" placeholder="yourusername" class="w-full p-2 rounded-xl border-none neumorphic-input text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-300" />
       </div>
       <div class="input-group mb-4">
         <label for="registerPassword" class="block mb-1 text-sm text-gray-700">Password</label>
@@ -74,17 +71,42 @@
       </button>
     </div>
     <div class="or text-center mt-6 text-sm text-gray-500">Or sign up with</div>
-    <div class="social flex justify-center gap-4 mt-4">
-      <div class="social-icon w-10 h-10 neumorphic-button rounded-full flex justify-center items-center cursor-pointer text-lg text-gray-700 transition-all duration-300 hover:neumorphic-inset">
-        <span>G</span>
-      </div>
-      <div class="social-icon w-10 h-10 neumorphic-button rounded-full flex justify-center items-center cursor-pointer text-lg text-gray-700 transition-all duration-300 hover:neumorphic-inset">
-        <span>f</span>
-      </div>
-      <div class="social-icon w-10 h-10 neumorphic-button rounded-full flex justify-center items-center cursor-pointer text-lg text-gray-700 transition-all duration-300 hover:neumorphic-inset">
-        <span>🐦</span>
-      </div>
+    <div class="social-login-buttons flex flex-col gap-3 mt-4">
+      <a href="/login/google" class="social-btn google-btn neumorphic-button">Sign up with Google</a>
+      <a href="/login/facebook" class="social-btn facebook-btn neumorphic-button">Sign up with Facebook</a>
     </div>
+    <style>
+      .social-login-buttons .social-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px 0;
+        border-radius: 12px;
+        font-weight: 600;
+        font-size: 1rem;
+        text-decoration: none;
+        transition: background 0.2s, box-shadow 0.2s;
+        box-shadow: 5px 5px 10px #bec3c9, -5px -5px 10px #ffffff;
+      }
+      .google-btn {
+        background: #fff;
+        color: #444;
+        border: 1px solid #ddd;
+      }
+      .google-btn:hover {
+        background: #f1f1f1;
+        box-shadow: inset 3px 3px 6px #bec3c9, inset -3px -3px 6px #ffffff;
+      }
+      .facebook-btn {
+        background: #1877f3;
+        color: #fff;
+        border: none;
+      }
+      .facebook-btn:hover {
+        background: #145db2;
+        box-shadow: inset 3px 3px 6px #bec3c9, inset -3px -3px 6px #ffffff;
+      }
+    </style>
   </div>
   <script>
     // Get references to elements
@@ -127,11 +149,10 @@
       hideMessage();
     });
     function handleRegister() {
-      const name = document.getElementById('registerName').value.trim();
-      const email = document.getElementById('registerEmail').value.trim();
+      const username = document.getElementById('registerUsername').value.trim();
       const password = document.getElementById('registerPassword').value;
       const confirmPassword = document.getElementById('registerConfirmPassword').value;
-      if (!name || !email || !password || !confirmPassword) {
+      if (!username || !password || !confirmPassword) {
         showMessage("Please fill out all fields.", 'error');
         return;
       }
@@ -140,7 +161,7 @@
         return;
       }
       const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-      if (!emailRegex.test(email)) {
+      if (!emailRegex.test(username)) { // Changed to username for email validation
         showMessage("Please enter a valid email address.", 'error');
         return;
       }
@@ -148,7 +169,10 @@
         showMessage("Password must be at least 6 characters long.", 'error');
         return;
       }
-      showMessage(`Welcome ${name}! Registration successful.`, 'success');
+      showMessage(`Welcome ${username}! Registration successful. Redirecting to login...`, 'success');
+      setTimeout(() => {
+        window.location.href = 'login.html';
+      }, 1800);
     }
     function handleLogin() {
       const email = document.getElementById('loginEmail').value.trim();
